--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -1,22 +1,14 @@
-name: Labeling
+name: Add Size Label to PR
 on:
-  pull_request:
-    branches: [main]
+  pull_request
+
 jobs:
-  labeler:
+  build:
+    name: Add Size Label to PR
     runs-on: ubuntu-latest
-    name: Label PR size
     steps:
-      - uses: codelytv/pr-size-labeler@v1
+      - name: Add Size Label to PR
+        uses: WizardOhio24/label-pr-size-action@master
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          xs_max_size: '10'
-          s_max_size: '100'
-          m_max_size: '300'
-          l_max_size: '1000'
-          fail_if_xl: 'false'
-          message_if_xl: >
-            'This PR exceeds the recommended size of 1000 lines.
-            Please make sure you are NOT addressing multiple issues with one PR.
-            Note this PR might be rejected due to its size.’
-          github_api_url: 'api.github.com'
+          size-label-color: '10, very small, ffaf65 | 100, small, ff9e58 | 500, medium, ff9654 | 2000, large, ff905d | 100000, massive, ff905d'
